# bike-shop

./: .env.example  .gitignore  CHANGELOG.md  MANIFEST.md  README.md  docker-compose.yml  mcp.json  projects.yaml  pyproject.toml
docs/: _config.yml  index.md  technical-specification.md
docs/diagrams/: architecture-overview.excalidraw  architecture-reference.md
src/bike_shop/: accumulator.py  agents.py  config.py  extraction.py  github_auth.py  handlers.py  main.py  mem0_client.py  memory.py  memory_agent.py  memory_schema.py  model_switch.py  observability.py  project.py  redis_client.py  router.py  session.py  short_term.py  summarizer.py  worktree.py
src/bike_shop/providers/: __init__.py  claude.py
src/bike_shop/slack/: context.py  handler.py
src/bike_shop/tools/: notion.py  slack.py
tests/: test_accumulator.py  test_handler_tracer_diff.py  test_interaction_counter.py  test_memory.py  test_observability.py  test_project.py  test_provider.py  test_router.py  test_worktree.py
