[project]
name = "bike-shop"
version = "0.1.0"
description = "Bike Shop team agents — multi-tool personas powered by Claude Code CLI"
requires-python = ">=3.13"
dependencies = [
    "slack-bolt>=1.18",
    "slack-sdk>=3.27",
    "python-dotenv>=1.0",
    "PyJWT[crypto]>=2.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
bike-shop = "bike_shop.main:main"
