[project]
name = "bike-shop"
version = "0.3.0"
description = "Bike Shop team agents — multi-tool personas powered by Claude Code CLI"
requires-python = ">=3.12"
dependencies = [
    "slack-bolt==1.27.0",
    "slack-sdk==3.41.0",
    "python-dotenv==1.2.2",
    "PyJWT[crypto]==2.12.1",
    "anthropic==0.86.0",
    "langfuse==4.0.1",
    "mem0ai==1.0.9",
    "ollama==0.6.1",
    "PyYAML==6.0.1",
]

[build-system]
requires = ["hatchling==1.29.0"]
build-backend = "hatchling.build"

[project.scripts]
bike-shop = "bike_shop.main:main"
